# orders_bot

./: .env.example  .env.test  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose-test.yml  docker-compose.yml  prepare_volumes.sh  pyproject.toml
app/: config.py
app/domain/access_levels/: access_policy.py
app/domain/access_levels/dto/: __init__.py  access_level.py
app/domain/access_levels/exceptions/: access_levels.py
app/domain/access_levels/interfaces/: persistence.py  uow.py
app/domain/access_levels/models/: access_level.py  helper.py
app/domain/base/dto/: base.py
app/domain/goods/: access_policy.py
app/domain/market/: access_policy.py
app/domain/order/: access_policy.py
app/domain/user/: access_policy.py
app/infrastructure/database/: db.py  exception_mapper.py  import_from_csv.py  uow.py
app/infrastructure/exporters/: orders_csv.py
app/tgbot/: __main__.py  constants.py
app/tgbot/event_handlers/: add_order.py  order.py  setup_middlewares.py
app/tgbot/filters/: __init__.py  access_level.py
app/tgbot/handlers/: __init__.py  message_templates.py  setup.py
app/tgbot/middlewares/: __init__.py  database.py  services.py  setup.py  user.py
app/tgbot/services/: set_commands.py
app/tgbot/states/: __init__.py  add_order.py  admin_menu.py  goods_db.py  help_.py  history.py  main_menu.py  market_db.py  user_db.py
tests/: conftest.py
tests/fixtures/: db.py  repo.py
tests/infrastructure/repositories/: conftest.py  test_access_levels.py  test_goods.py  test_market.py  test_order.py
(+117 files in other folders)
